# BoostServerTech

./: .drone.star  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.drone/: drone.bat  drone.sh
.github/actions/boost_clone/: action.yml
.github/actions/boost_patch/: action.yml
.github/actions/cmake_run/: action.yml
.github/workflows/: ci.yml
source/: lib.cpp  main.cpp
